# roself

./: .gitignore  README.md  record.py  record_config.json  roself.py
commands/: r  roself
rosbag_tui_player/scripts/: clear.sh
rosbag_tui_player/src/ros1_bag_tui_cpp/: CMakeLists.txt  README.md  package.xml
rosbag_tui_player/src/ros1_bag_tui_cpp/src/: main.cpp
scripts/: install.sh
